fix: font-size on mobile device

--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -8,6 +8,11 @@
   flex-direction: column;
 }
 
+@mixin flex_column-reverse {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
 @mixin flex_row {
   display: flex;
   flex-direction: row;
